# Allwall

./: AGENTS.md  Cargo.toml  clippy.toml  deny.toml  example-config.toml  plan.md  rust-toolchain.toml  rustfmt.toml
allwall/: Cargo.toml
allwall/src/: decode.rs  error.rs  lib.rs  main.rs  prelude.rs
allwall/src/cli/: completions.rs  error.rs  mod.rs  run.rs  version.rs
allwall/src/cli/ipc/: mod.rs  protocol.rs
allwall/src/cli/ipc/fps/: mod.rs
allwall/src/cli/ipc/next/: mod.rs
allwall/src/cli/ipc/prev/: mod.rs
allwall/src/config/: error.rs  general.rs  mod.rs  source.rs
allwall/src/engine/: context.rs  error.rs  events.rs  mod.rs  texture.rs
allwall/src/engine/graphics/: context.rs  dmabuf.rs  mod.rs  texture.rs
allwall/src/engine/scene/: config.rs  mod.rs  monitor.rs  runtime.rs
allwall/src/engine/wayland/: handlers.rs  mod.rs  pointer.rs  window.rs
allwall/src/sources/: error.rs  media_detector.rs  mod.rs  types.rs
allwall/src/sources/grass/: grass.rs  mod.rs  perlin.rs  types.rs
allwall/src/sources/grass/shaders/: dirt.wgsl  grass.wgsl
allwall/src/sources/media/: mod.rs
allwall/src/sources/media/still/: mod.rs
allwall/src/sources/media/video/: decoder.rs  error.rs  mod.rs
allwall/src/sources/media/video/shaders/: nv12.wgsl  video.wgsl
allwall/src/sources/smoke/: smoke.rs
allwall/src/sources/smoke/shaders/: advection.wgsl  divergence.wgsl  pressure1.wgsl  render.wgsl  subtract.wgsl
allwall/src/sources/still/: mod.rs
allwall/src/sources/video/: mod.rs
allwall/src/transitions/: circle_reveal.rs  config.rs  error.rs  fade.rs  mod.rs
allwall/src/transitions/shaders/: circle_reveal.wgsl
generate/: Cargo.toml
generate/src/: main.rs  nix.rs  schema.rs
src/: error.rs  main.rs
src/cli/: mod.rs  run.rs  version.rs
src/config/: mod.rs
src/engine/: context.rs  mod.rs  texture.rs
src/renderer/: mod.rs
src/sources/: loader.rs  media_detector.rs  mod.rs
src/sources/smoke/: mod.rs  smoke.rs
src/sources/smoke/shaders/: common.wgsl  divergence.wgsl  pressure1.wgsl  pressure2.wgsl  render.wgsl
src/sources/still/: fade.rs  mod.rs  texture.rs
src/sources/still/shaders/: fade.wgsl  static.wgsl
src/transitions/: circle_reveal.rs  fade.rs  mod.rs
src/transitions/shaders/: fade.wgsl
xtask/: Cargo.toml
xtask/src/: check.rs  main.rs
xtask/src/generate/: mod.rs  nix.rs  schema.rs
