[package]
name = "allwall"
version = "0.1.0"
edition = "2024"
default-run = "allwall"

[lints]
workspace = true

[features]
default = []
generate = ["dep:schemars", "dep:serde-nixos"]

[lib]
name = "allwall"
path = "src/lib.rs"

[[bin]]
name = "allwall"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Graphics/ Wayland
wgpu = { workspace = true }
wgpu-hal = { workspace = true }
ash = { workspace = true }
bytemuck = { workspace = true }
smithay-client-toolkit = { workspace = true }
wayland-protocols = { workspace = true }
wayland-client = { workspace = true }
wayland-backend = { workspace = true }
raw-window-handle = { workspace = true }

# Media
gstreamer = { workspace = true }
gstreamer-app = { workspace = true }
gstreamer-video = { workspace = true }
gstreamer-allocators = "0.22"
image = { workspace = true }
vk-video = { workspace = true }

# Utilities
calloop = { workspace = true }
ctrlc = { workspace = true }
bitflags = { workspace = true }
derive_more = { workspace = true }
keyframe = { workspace = true }
once_cell = { workspace = true }
pollster = { workspace = true }
rand = { workspace = true }
xdg = { workspace = true }
mime-type = { workspace = true }
mime_guess = { workspace = true }
bincode = { workspace = true }
libc = "0.2"

# Metadata generation
schemars = { workspace = true, optional = true }
serde-nixos = { workspace = true, optional = true }

[dev-dependencies]
anyhow = "1"
proptest = "1.5"
