[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
allwall = { path = "../allwall", features = ["generate"] }
anyhow = "1"
clap = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
